@@ -63,6 +63,7 @@
 					type="category"
 					extension="com_banners"
 					label="JCATEGORY"
+					multiple="true" size="5"											
 					description="MOD_BANNERS_FIELD_CATEGORY_DESC" />
 
 				<field
